# notetaking

./: .markdownlint.json  Cargo.toml  FIXES.md  NOTE_CREATION_FIX.md  README.md  STATUS.md  SUMMARY.md  build.sh
notes_data/aaaaa/: khhlk.md
notes_data/aaaaaaaaaa/: aaa.md  new.md
notes_data_cloud_sync/aaaaaaaaaa/: new.md
src/: autocomplete.rs  encryption.rs  images.rs  links.rs  main.rs  main_enhanced.rs  note.rs  pdf_export.rs  search.rs  spellcheck.rs  storage.rs  tags.rs  theme.rs  version_control.rs
updates/: ALL_FIXED.md  ARCHITECTURE.md  BUILD_DEPLOY.md  BUILD_READY.md  ENHANCED_FEATURES.md  FINAL_CLEAN.md  INTEGRATION_COMPLETE.md  NEW_FEATURES_v0.4.md  QUICKSTART.md  QUICK_INTEGRATION.md  SEAMLESS_EDITING.md
